// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component should apply values from theme 1`] = `
<View
  replaceTheme={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "height": 0.5,
    }
  }
  updateTheme={[Function]}
/>
`;

exports[`Divider Component should pass view properties 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#bcbbc1",
      "height": 0.5,
    }
  }
  testID="testing"
/>
`;

exports[`Divider Component should render with inset true and insetType left 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#bcbbc1",
      "height": 0.5,
      "marginLeft": 72,
    }
  }
/>
`;

exports[`Divider Component should render with inset true and insetType middle 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#bcbbc1",
      "height": 0.5,
      "marginLeft": 72,
      "marginRight": 72,
    }
  }
/>
`;

exports[`Divider Component should render with inset true and insetType right 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#bcbbc1",
      "height": 0.5,
      "marginRight": 72,
    }
  }
/>
`;

exports[`Divider Component should render with orientation vertical 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#bcbbc1",
      "borderRightColor": "#bcbbc1",
      "borderRightWidth": 0.5,
      "height": "auto",
    }
  }
/>
`;

exports[`Divider Component should render with style 1`] = `
<View
  style={
    Object {
      "backgroundColor": "blue",
      "height": 0.5,
    }
  }
/>
`;

exports[`Divider Component should render without issues 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#bcbbc1",
      "height": 0.5,
    }
  }
/>
`;
